--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,39 @@
-.grid {
-  width: 1200px;
-  height: 650px;
+* {
+  margin: 0; padding: 0;
+}
+
+.container {
+  width: 700px;
+  margin: 0 auto;
+  text-align: center;
+  color: gray;
+}
+
+#header {
+  margin-top: 30px;
+}
+
+h1 {
+  font-size: 45px;
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+
+.start {
+  text-align: center;
+  background-color: #efefef;
   border: 1px solid black;
-  background-color: red;
+  color: #757575;
+  margin: 11px 4px;
+  font-family: arial, sans-serif;
+  font-size: 15px;
+  font-weight: bold;
+  padding: 5px;
+  width: 150px;
+}
+
+.start:hover {
+  border: 1px solid #d9d9d9;
+  color: #403e3e;
+  box-shadow: 1px 1px 2px #888888;
 }
