--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,10 @@
   margin: 0; padding: 0;
 }
 
-.container {
+.container-fluid {
   width: 700px;
   margin: 0 auto;
   text-align: center;
-  color: gray;
 }
 
 #header {
@@ -20,20 +19,10 @@ h1 {
 }
 
 .start {
-  text-align: center;
-  background-color: #efefef;
-  border: 1px solid black;
-  color: #757575;
   margin: 11px 4px;
   font-family: arial, sans-serif;
   font-size: 15px;
   font-weight: bold;
   padding: 5px;
   width: 150px;
-}
-
-.start:hover {
-  border: 1px solid #d9d9d9;
-  color: #403e3e;
-  box-shadow: 1px 1px 2px #888888;
 }
